--- a/src/app/features/film/component/film.component.html
+++ b/src/app/features/film/component/film.component.html
@@ -5,6 +5,10 @@
                 <mma-card [data]="elem" [dialogComponentType]="dialogComponentType"></mma-card>
             </div>
         </div>
+
+        <!-- TAILWIND COMPONENT -->
+        <mma-tailwind-card></mma-tailwind-card>
+        
         <button mat-fab color="accent" (click)="openAddDialog()">
             <mat-icon>add</mat-icon>
         </button>
