--- a/src/app/layout/sidenav/component/sidenav.component.html
+++ b/src/app/layout/sidenav/component/sidenav.component.html
@@ -50,6 +50,9 @@
        <a mat-list-item (click)="navigateBy('book')">
          <mat-icon>auto_stories</mat-icon><span class="nav-caption">Libri</span>
        </a>
+       <a mat-list-item (click)="logout()">
+        <mat-icon>logout</mat-icon><span class="nav-caption">logout</span>
+      </a>
      </mat-nav-list>
     </mat-sidenav>
       
